<resources>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_conditions">CONDICIONES DE USO</string>
    <string name="about_conditions_content">Adif realiza los máximos esfuerzos para asegurar la fiabilidad de la información mostrada en esta aplicación y su actualización inmediata tan pronto se disponga de una información más fiable.\nLa información en tiempo real puede variar debido a motivos de la operación ferroviaria, por lo que aconsejamos a los viajeros que permanezcan atentos a las informaciones e indicaciones que puedan facilitarse en las estaciones.\nAdif no se hace responsable de los daños y perjuicios derivados, directa o indirectamente, del uso de la información mostrada a través de esta aplicación.\nSeguimos trabajando para mejorar la información suministrada a través de esta aplicación y en próximas versiones se incluirá, por ejemplo, el seguimiento de los trenes y estaciones de la Red de Ancho Métrico y se incorporará la numeración de los trenes según aparece en los billetes expedidos por las empresas ferroviarias, entre otras mejoras.</string>
    <string name="about_header">Propiedad de Adif</string>
    <string name="about_message">Adif en tu móvil es un producto de Adif con datos de tráfico proporcionados por Adif-Elcano e información de las estaciones de Adif.</string>
    <string name="about_terms">TÉRMINOS LEGALES</string>
    <string name="circulation_header_filters">Filtros</string>
    <string name="circulation_header_line">Línea</string>
    <string name="circulation_header_origin">Procedencia</string>
    <string name="circulation_header_platform">Vía</string>
    <string name="circulation_header_time">Hora</string>
    <string name="circulation_traintype_cercanias">Cercanías</string>
    <string name="circulation_traintype_corporates">Otros</string>
    <string name="circulation_traintype_others">AV LD MD</string>
    <string name="contact_follow_label">Síguenos en</string>
    <string name="contact_info_24_hours">24 horas</string>
    <string name="contact_info_message">Servicio de información</string>
    <string name="contact_web_label">Sitio Web</string>
    <string name="content_description_avldmd">Alta velocidad, larga y media distancia</string>
    <string name="content_description_change_direction">Cambiar el sentido del trayecto</string>
    <string name="content_description_destination_station">Estación de llegada</string>
    <string name="content_description_facebook_button">Abrir facebook de Adif</string>
    <string name="content_description_icon_favorite">Añadir a favoritos</string>
    <string name="content_description_icon_observations">Mostrar las observaciones de las estaciones.</string>
    <string name="content_description_icon_search_station">Buscar estación</string>
    <string name="content_description_icon_share">Compartir</string>
    <string name="content_description_icon_subscription">Crear una suscripción</string>
    <string name="content_description_instagram_button">Abrir instagram de Adif</string>
    <string name="content_description_origin_station">Estación de salida</string>
    <string name="content_description_station_website_label">Sitio Web botón</string>
    <string name="content_description_twitter_button">Abrir twitter de Adif</string>
    <string name="near_station_arrivals_subtitle">Llegadas</string>
    <string name="near_station_arrivals_title">Próximas</string>
    <string name="near_station_commercial_subtitle">Comercial</string>
    <string name="near_station_commercial_title">Área</string>
    <string name="near_station_departures_subtitle">Salidas</string>
    <string name="near_station_departures_title">Próximas</string>
    <string name="near_station_info_subtitle">de la estación</string>
    <string name="near_station_info_title">Info</string>
    <string name="near_station_loading_title">Buscando estaciones…</string>
    <string name="near_station_no_location_permission_info">Acepte el permiso para poder encontrar la estación más cercana a su posición</string>
    <string name="near_station_title">Estación más cercana</string>
</resources>