<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorAccentDark"
    android:paddingTop="@dimen/big_vertical_padding"
    android:paddingBottom="@dimen/default_vertical_padding"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textAppearance="@style/TextHomeSection"
        android:id="@+id/nearStationTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/near_station_title"
        app:layout_constraintEnd_toStartOf="@+id/nearStationInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:textAppearance="@style/TextHomeSection"
        android:textSize="20sp"
        android:textColor="@color/yellow"
        android:ellipsize="end"
        android:id="@+id/nearStationSubtitle"
        android:visibility="visible"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/near_station_loading_title"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nearStationTitle"/>
    <TextView
        android:textAppearance="@style/TextHomeWalking"
        android:gravity="center_vertical"
        android:id="@+id/nearStationInfo"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:drawablePadding="@dimen/extra_small_padding"
        app:drawableStartCompat="@drawable/ic_walk"
        app:layout_constraintBottom_toBottomOf="@+id/nearStationTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@+id/nearStationTitle"
        app:layout_constraintTop_toTopOf="@+id/nearStationTitle"/>
    <com.adif.elcanomovil.commonViews.StationOptionView
        android:id="@+id/stationInfoDepartures"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_vertical_margin"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="4dp"
        app:iconDrawable="@drawable/ic_station_option_departures"
        app:layout_constraintEnd_toStartOf="@+id/stationInfoArrivals"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nearStationSubtitle"
        app:subtitleText="@string/near_station_departures_subtitle"
        app:subtitleTextColor="@color/white"
        app:subtitleTextSize="15sp"
        app:titleText="@string/near_station_departures_title"
        app:titleTextSize="12sp"/>
    <com.adif.elcanomovil.commonViews.StationOptionView
        android:id="@+id/stationInfoArrivals"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="4dp"
        app:iconDrawable="@drawable/ic_station_option_arrivals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stationInfoDepartures"
        app:layout_constraintTop_toTopOf="@+id/stationInfoDepartures"
        app:subtitleText="@string/near_station_arrivals_subtitle"
        app:subtitleTextColor="@color/white"
        app:subtitleTextSize="15sp"
        app:titleText="@string/near_station_arrivals_title"
        app:titleTextSize="12sp"/>
    <com.adif.elcanomovil.commonViews.StationOptionView
        android:id="@+id/stationInfoDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        app:iconDrawable="@drawable/ic_station_option_info"
        app:layout_constraintEnd_toStartOf="@+id/stationInfoComercial"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stationInfoDepartures"
        app:subtitleText="@string/near_station_info_subtitle"
        app:subtitleTextColor="@color/white"
        app:subtitleTextSize="12sp"
        app:titleText="@string/near_station_info_title"
        app:titleTextSize="15sp"/>
    <com.adif.elcanomovil.commonViews.StationOptionView
        android:id="@+id/stationInfoComercial"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="4dp"
        app:iconDrawable="@drawable/ic_station_option_commercial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stationInfoDetails"
        app:layout_constraintTop_toBottomOf="@+id/stationInfoDepartures"
        app:subtitleText="@string/near_station_commercial_subtitle"
        app:subtitleTextColor="@color/white"
        app:subtitleTextSize="15sp"
        app:titleText="@string/near_station_commercial_title"
        app:titleTextSize="12sp"/>
    <TextView
        android:textAppearance="@style/TextHomeGreyWarning"
        android:gravity="left"
        android:id="@+id/permissionStatusTextView"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_vertical_margin"
        android:text="@string/near_station_no_location_permission_info"
        android:drawablePadding="@dimen/big_padding"
        android:paddingHorizontal="@dimen/default_padding"
        android:paddingVertical="@dimen/small_padding"
        app:drawableLeftCompat="@drawable/ic_baseline_location_off_layer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nearStationSubtitle"/>
    <ProgressBar
        android:gravity="center"
        android:id="@+id/stationOptionsLoading"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_vertical_margin"
        android:indeterminate="true"
        android:indeterminateTint="@color/yellow"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nearStationSubtitle"/>
</androidx.constraintlayout.widget.ConstraintLayout>
