<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.adif.elcanomovil.commonViews.HeaderView
        android:id="@+id/header_view_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/extra_vertical_margin"
        android:src="@drawable/ic_adif_logo"
        android:scaleType="fitCenter"
        android:contentDescription="@null"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_view_contact"/>
    <TextView
        android:textAppearance="@style/TextMoreAdifTitle"
        android:id="@+id/header_textview_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/extra_vertical_margin"
        android:text="@string/contact_info_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"/>
    <TextView
        android:textAppearance="@style/TextMoreAdifSubTitle"
        android:id="@+id/hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_vertical_margin"
        android:text="@string/contact_info_24_hours"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_textview_contact"/>
    <TextView
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:id="@+id/tv_web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/contact_web_label"
        android:drawableTop="@drawable/ic_web"
        android:drawablePadding="16dp"
        android:contentDescription="@string/content_description_station_website_label"
        android:scaleX="0.8"
        android:scaleY="0.8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hours"
        style="@style/TextMoreAdifMessage"/>
    <TextView
        android:id="@+id/tv_follow_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/giant_vertical_margin"
        android:text="@string/contact_follow_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_web"
        style="@style/TextMoreAdifSecondaryTitle"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_vertical_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_follow_us">
        <ImageView
            android:orientation="vertical"
            android:id="@+id/iv_facebook"
            android:layout_margin="8dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/facebook"
            android:contentDescription="@string/content_description_facebook_button"
            app:layout_constraintEnd_toStartOf="@+id/iv_instagram"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/MoreAdifImageButton"/>
        <ImageView
            android:orientation="vertical"
            android:id="@+id/iv_instagram"
            android:layout_margin="8dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/instagram"
            android:contentDescription="@string/content_description_instagram_button"
            app:layout_constraintEnd_toStartOf="@+id/iv_twitter"
            app:layout_constraintStart_toEndOf="@+id/iv_facebook"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/MoreAdifImageButton"/>
        <ImageView
            android:orientation="vertical"
            android:id="@+id/iv_twitter"
            android:layout_margin="8dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/twitter"
            android:contentDescription="@string/content_description_twitter_button"
            android:layout_marginEnd="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_instagram"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/MoreAdifImageButton"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
