<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/small_padding"
    android:paddingVertical="@dimen/small_padding">
    <ImageView
        android:id="@+id/direction_arrow"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/ic_path_direction_arrow"
        android:scaleType="centerInside"
        android:contentDescription="@null"
        android:layout_marginVertical="@dimen/margin_low"
        app:layout_constraintBottom_toBottomOf="@+id/station_to"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/station"/>
    <TextView
        android:textColorHint="@color/colorTextSecondaryGrey"
        android:ellipsize="end"
        android:gravity="center"
        android:id="@+id/station"
        android:background="@drawable/shape_rounded_corners"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/circulation_station_header_marginTop"
        android:hint="@string/content_description_origin_station"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/small_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/direction_arrow"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/TextCirculationHeader.Station"/>
    <ImageView
        android:id="@+id/search"
        android:padding="8dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_search"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="@+id/station"
        app:layout_constraintEnd_toStartOf="@+id/switch_stations"
        app:layout_constraintTop_toTopOf="@+id/station"/>
    <TextView
        android:textColorHint="@color/colorTextSecondaryGrey"
        android:ellipsize="end"
        android:gravity="center"
        android:id="@+id/station_to"
        android:background="@drawable/shape_rounded_corners"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:hint="@string/content_description_destination_station"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/small_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/direction_arrow"
        app:layout_constraintTop_toBottomOf="@+id/station"
        style="@style/TextCirculationHeader.Station"/>
    <ImageView
        android:id="@+id/search_to"
        android:padding="8dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_search"
        android:contentDescription="@string/content_description_icon_search_station"
        app:layout_constraintBottom_toBottomOf="@+id/station_to"
        app:layout_constraintEnd_toStartOf="@+id/switch_stations"
        app:layout_constraintTop_toTopOf="@+id/station_to"/>
    <ImageButton
        android:id="@+id/switch_stations"
        android:background="@color/black"
        android:padding="0dp"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_between_stations_switch"
        android:scaleType="fitCenter"
        android:contentDescription="@string/content_description_change_direction"
        app:layout_constraintBottom_toTopOf="@+id/search_to"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search"/>
    <com.adif.elcanomovil.uiDepartures.views.TrainTypeSelector
        android:id="@+id/train_selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding"
        app:isCercanias="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/station_to"/>
    <TextView
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:id="@+id/filters"
        android:background="@android:color/transparent"
        android:paddingTop="16dp"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/circulation_header_filters"
        android:drawablePadding="8dp"
        android:textAllCaps="true"
        android:drawableStart="@drawable/ic_action_more"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/train_selector"/>
    <ImageView
        android:id="@+id/observations"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:visibility="gone"
        android:src="@drawable/ic_info_white"
        android:contentDescription="@string/content_description_icon_observations"
        app:layout_constraintBottom_toBottomOf="@+id/train_selector"
        app:layout_constraintEnd_toStartOf="@+id/share"
        app:layout_constraintTop_toTopOf="@+id/train_selector"
        app:tint="@color/colorPrimary"
        style="@style/IconButton"/>
    <ImageView
        android:id="@+id/share"
        android:visibility="gone"
        android:src="@drawable/ic_share"
        android:contentDescription="@string/content_description_icon_share"
        app:layout_constraintBottom_toBottomOf="@+id/observations"
        app:layout_constraintEnd_toStartOf="@+id/favourite"
        app:layout_constraintTop_toTopOf="@+id/observations"
        style="@style/IconButton"/>
    <ImageView
        android:id="@+id/favourite"
        android:src="@drawable/ic_favourite_off"
        android:contentDescription="@string/content_description_icon_favorite"
        app:layout_constraintBottom_toBottomOf="@+id/observations"
        app:layout_constraintEnd_toStartOf="@+id/twitter"
        app:layout_constraintTop_toTopOf="@+id/observations"
        style="@style/IconButton"/>
    <ImageView
        android:id="@+id/twitter"
        android:src="@drawable/ic_subscription"
        android:contentDescription="@string/content_description_icon_subscription"
        app:layout_constraintBottom_toBottomOf="@+id/observations"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/observations"
        style="@style/IconButton"/>
</androidx.constraintlayout.widget.ConstraintLayout>
