<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="@dimen/small_padding">
    <androidx.constraintlayout.widget.Guideline
        android:orientation="vertical"
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="@dimen/circulation_first_column_and_header_width_percentage"/>
    <androidx.constraintlayout.widget.Guideline
        android:orientation="vertical"
        android:id="@+id/guideline75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.73"/>
    <androidx.constraintlayout.widget.Guideline
        android:orientation="vertical"
        android:id="@+id/guideline90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.91"/>
    <TextView
        android:id="@+id/time"
        android:text="@string/circulation_header_time"
        android:layout_marginStart="@dimen/medium_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/TextCirculationHeaderRegular"/>
    <TextView
        android:id="@+id/station"
        android:text="@string/circulation_header_origin"
        android:layout_marginStart="@dimen/small_padding"
        android:layout_marginEnd="@dimen/small_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline75"
        app:layout_constraintStart_toEndOf="@+id/guideline20"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/TextCirculationHeaderRegular"/>
    <TextView
        android:id="@+id/type"
        android:text="@string/circulation_header_line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline90"
        app:layout_constraintStart_toEndOf="@+id/guideline75"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/TextCirculationHeaderRegular"/>
    <TextView
        android:gravity="start"
        android:id="@+id/platform"
        android:text="@string/circulation_header_platform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline90"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/TextCirculationHeaderRegular"/>
</androidx.constraintlayout.widget.ConstraintLayout>
